Implement signed firmware verification: If enabled (Disabled by default), the bootloader will reject and not flash any firmware that is not digitally signed with the proper key

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = lib/uf2
 	url = https://github.com/microsoft/uf2.git
 
+[submodule "lib/tinycrypt"]
+	path = lib/tinycrypt
+	url = https://github.com/intel/tinycrypt
